--- a/Vue3/03_grammer_template.html
+++ b/Vue3/03_grammer_template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:v-bind="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:v-bind="http://www.w3.org/1999/xhtml" xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>VUE3语法模板</title>
@@ -52,6 +52,16 @@
 <br>-*-*-*-*-*-*-*-*-*-*-*-*-*-*-<br>
 <div id="paragram">
     <p><a v-bind:href="url">搜索引擎</a></p>
+</div>
+<br>-*-*-*-*-*-*-*-*-*-*-*-*-*-*-<br>
+<div id="userInput">
+    <p>{{ message }}</p>
+    <input v-model="message">
+</div>
+<br>-*-*-*-*-*-*-*-*-*-*-*-*-*-*-<br>
+<div id="reverseWords">
+    <p>{{ message }}</p>
+    <button v-on:click="reverse">反转字符串</button>
 </div>
 <!--{{...}} 标签的内容将会被替代为对应组件实例中 message 属性的值，如果 message 属性的值发生了改变，{{...}} 标签内容也会更新。-->
 <!--如果不想改变标签的内容，可以通过使用 v-once 指令执行一次性地插值，当数据改变时，插值处的内容不会更新-->
@@ -133,6 +143,28 @@
         }
     }
     Vue.createApp(searchlocation).mount("#paragram")
+    //用户输入
+    const userInput = {
+        data(){
+            return{
+                message:"zyq"
+            }
+        }
+    }
+    Vue.createApp(userInput).mount("#userInput")
+    // v-on 监听事件
+    const listenEvent = {
+        data(){
+            return{
+                message:'Jack Ma'
+            }
+        },methods:{
+            reverse(){
+                this.message = this.message.split('').reverse().join('')
+            }
+        }
+    }
+    Vue.createApp(listenEvent).mount("#reverseWords")
 </script>
 </body>
 </html>
