--- a/Vue3/05_loop_sataement.html
+++ b/Vue3/05_loop_sataement.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:v-on="http://www.w3.org/1999/xhtml" xmlns:v-bind="http://www.w3.org/1999/XSL/Transform">
 <head>
     <meta charset="UTF-8">
     <title>循环语句</title>
@@ -136,6 +136,57 @@
             }
         }
         Vue.createApp(threeparagram).mount("#threeparagram")
+    </script>
+
+    <!-- 显示过滤/排序后结果 -->
+    <div id="filteNumber">
+        <ul>
+            <li v-for="number in eventNumber">{{ number }}</li>
+        </ul>
+    </div>
+    <script>
+        const computeNumber = {
+            data(){
+                return{
+                    numbers:[ 1, 3, 5, 7, 2, 4, 6, 8]
+                }
+            },computed:{
+                eventNumber(){
+                    return this.numbers.filter( number => number % 2 === 0)
+                }
+            }
+        }
+        Vue.createApp(computeNumber).mount("#filteNumber")
+    </script>
+    <!-- v-for/v-if 联合使用 -->
+    <div id="select">
+        <select v-on:change="changeVal($event)" v-model="selOption">
+            <template v-for="(site,index) in sites" v-bind:site="site" v-bind:index="index" v-bind:key="site.id">
+                <option v-if="index == 1" v-bind:value="site.name" selected>{{ site.name }}</option>
+                <option v-else v-bind:value="site.name">{{ site.name }}</option>
+            </template>
+        </select>
+        <div>您选择了：{{ selOption }}</div>
+    </div>
+    <script>
+        const select ={
+            data(){
+                return{
+                    selOption:"腾讯",
+                    sites:[
+                        { id:1, name:"百度"},
+                        { id:2, name:"腾讯"},
+                        { id:3, name:"阿里"}
+                    ]
+                }
+            },methods:{
+                changeVal:function(event){
+                    this.selOption=event.target.value
+                    alert("您选择了："+this.selOption)
+                }
+            }
+        }
+        Vue.createApp(select).mount("#select")
     </script>
 </body>
 </html>
