--- a/Vue3/06_component.html
+++ b/Vue3/06_component.html
@@ -35,5 +35,22 @@
         })
         click.mount("#click")
     </script>
+    <!-- 局部组件 -->
+    <div id="localComponent">
+        <runoob-a></runoob-a>
+    </div>
+    <script>
+        var runoobA = {
+            template: '<h1>船新自定义局部组件</h1>'
+        }
+        const localComponent = Vue.createApp({
+            components: {
+                'runoob-a': runoobA
+            }
+        })
+        localComponent.mount("#localComponent")
+    </script>
+
+
 </body>
 </html>
