--- a/JQueryFoundation/06_plug/01_plug_object.html
+++ b/JQueryFoundation/06_plug/01_plug_object.html
@@ -5,16 +5,24 @@
     <title>JQ对象进行方法拓展</title>
     <script src="../js/jquery-3.6.0.min.js"></script>
     <script>
+        //使用jquery插件 给jq对象添加2个方法 check()选中所有复选框，uncheck()取消选中所有复选框
+        //1.定义jqeury的对象插件
         $.fn.extend({
+            //定义了一个check()方法。所有的jq对象都可以调用该方法
             check:function () {
+                //让复选框选中
+                //this:调用该方法的jq对象
                 this.prop("checked",true)
             },
             uncheck:function () {
+                //让复选框不选中
                 this.prop("checked",false)
             }
         })
         $(function () {
+            // 获取按钮
             $("#btn_checked").click(function () {
+                //获取复选框对象
                 $("input[type='checkbox']").check()
             })
             $("#btn-unchecked").click(function () {
