--- a/AJAX&JSON/web/02_ajax_by_jq.html
+++ b/AJAX&JSON/web/02_ajax_by_jq.html
@@ -22,7 +22,7 @@
     </script>
 </head>
 <body>
-<input type="button" value="异步请求" onclick="fcn()">
-<input type="text">
+<input type="button" value="发送异步请求" onclick="fcn()">
+<input>
 </body>
 </html>
